--- a/.github/workflows/task.yaml
+++ b/.github/workflows/task.yaml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt -f https://download.pytorch.org/whl/torch_stable.html; fi
     - name: Run the task
       run: |
         python transformers_playground.py
