--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,4 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-_tflow_select=2.3.0=gpu
-absl-py=0.12.0=py37haa95532_0
-astor=0.8.1=py37haa95532_0
-astunparse=1.6.3=py_0
-blas=1.0=mkl
-blinker=1.4=py37haa95532_0
-brotlipy=0.7.0=py37h2bbff1b_1003
-ca-certificates=2021.5.25=haa95532_1
-cachetools=4.2.2=pyhd3eb1b0_0
-certifi=2021.5.30=py37haa95532_0
-cffi=1.14.5=py37hcd4344a_0
-chardet=4.0.0=py37haa95532_1003
-click=7.1.2=pyhd3eb1b0_0
-coverage=5.5=py37h2bbff1b_2
-cryptography=3.4.7=py37h71e12ea_0
-cython=0.29.23=py37hd77b12b_0
-dataclasses=0.8=pyh6d0b6a4_7
-filelock=3.0.12=pyhd3eb1b0_1
-gast=0.3.3=py_0
-google-auth=1.21.3=py_0
-google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
-google-pasta=0.2.0=py_0
-grpcio=1.36.1=py37hc60d5dd_1
-h5py=2.10.0=py37h5e291fa_0
-hdf5=1.10.4=h7ebc959_0
-icc_rt=2019.0.0=h0cc432a_1
-idna=2.10=pyhd3eb1b0_0
-importlib-metadata=4.5.0=pypi_0
-intel-openmp=2020.2=254
-joblib=1.0.1=pyhd3eb1b0_0
-keras-applications=1.0.8=py_1
-keras-preprocessing=1.1.2=pyhd3eb1b0_0
-libprotobuf=3.14.0=h23ce68f_0
-markdown=3.3.4=py37haa95532_0
-mkl=2020.2=256
-mkl-service=2.3.0=py37h196d8e1_0
-mkl_fft=1.3.0=py37h46781fe_0
-mkl_random=1.1.1=py37h47e9c7a_0
-numpy=1.19.2=py37hadc3359_0
-numpy-base=1.19.2=py37ha3acd2a_0
-oauthlib=3.1.0=py_0
-openssl=1.1.1k=h2bbff1b_0
-opt_einsum=3.3.0=pyhd3eb1b0_1
-packaging=20.9=pyhd3eb1b0_0
-pip=21.0.1=py37haa95532_0
-protobuf=3.14.0=py37hd77b12b_1
-pyasn1=0.4.8=py_0
-pyasn1-modules=0.2.8=py_0
-pycparser=2.20=py_2
-pyjwt=1.7.1=py37_0
-pyopenssl=20.0.1=pyhd3eb1b0_1
-pyparsing=2.4.7=pyhd3eb1b0_0
-pyreadline=2.1=py37_1
-pysocks=1.7.1=py37_1
-python=3.7.10=h6244533_0
-python_abi=3.7=1_cp37m
-regex=2021.4.4=py37h2bbff1b_0
-requests=2.25.1=pyhd3eb1b0_0
-requests-oauthlib=1.3.0=py_0
-rsa=4.7.2=pyhd3eb1b0_1
-sacremoses=master=py_0
-scipy=1.6.2=py37h14eb087_0
-setuptools=52.0.0=py37haa95532_0
-six=1.15.0=py37haa95532_0
-sqlite=3.35.4=h2bbff1b_0
-tensorboard=2.4.0=pyhc547734_0
-tensorboard-plugin-wit=1.6.0=py_0
-tensorflow=2.3.0=mkl_py37h10aaca4_0
-tensorflow-base=2.3.0=eigen_py37h17acbac_0
-tensorflow-estimator=2.5.0=pyh7b7c402_0
-tensorflow-gpu=2.3.0=he13fc11_0
-termcolor=1.1.0=py37haa95532_1
-tokenizers=0.10.2=py37_0
-tqdm=4.59.0=pyhd3eb1b0_1
-transformers=4.4.2=py_0
-typing-extensions=3.10.0.0=pypi_0
-typing_extensions=3.7.4.3=pyha847dfd_0
-urllib3=1.26.4=pyhd3eb1b0_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-werkzeug=1.0.1=pyhd3eb1b0_0
-wheel=0.36.2=pyhd3eb1b0_0
-win_inet_pton=1.1.0=py37haa95532_0
-wincertstore=0.2=py37_0
-wrapt=1.12.1=py37he774522_1
-zipp=3.4.1=pyhd3eb1b0_0
-zlib=1.2.11=h62dcd97_4
+torch==1.9.0+cpu
+torchvision==0.10.0+cpu
+torchaudio==0.9.0
+transformers
