--- a/.github/workflows/task.yaml
+++ b/.github/workflows/task.yaml
@@ -17,6 +17,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt -f https://download.pytorch.org/whl/torch_stable.html; fi
-    - name: Run the task
+    - name: Run the facebook task
       run: |
-        python transformers_playground.py
+        python transformers_facebook_playground.py
+    - name: Run the sshleifer task
+      run: |
+        python transformers_sshleifer_playground.py
